tests/expects/char_failure/test_char_unterminated.expect
error: Unterminated character literal
  --> char_failure/test_char_unterminated.truk:2:17
  |
1 | fn main() : i32 {
2 |   var c: i8 = 'a;
  |                 ^
3 |   return 0;
  |

Compilation failed with 1 error(s)
