tests/expects/char_failure/test_char_unterminated.truk
fn main() : i32 {
  var c: i8 = 'a;
  return 0;
}
